Adding a rollup of tons of changes, with dns support.

--- a/environments/Makefile
+++ b/environments/Makefile
@@ -1,5 +1,4 @@
-ENVIRONMENT = $(shell git branch | grep '\*' | awk '{ print $2 }')
-#ENVIRONMENT := scratch
+ENVIRONMENT = $(shell git rev-parse --abbrev-ref HEAD)
 STACK := core
 
 include $(CURDIR)/../base.mk
